--- a/src/components/GameTable.css
+++ b/src/components/GameTable.css
@@ -1,20 +1,32 @@
+.MuiPaper-root-71.MuiPaper-elevation2-75.MuiPaper-rounded-72 {
+  border-radius: 8px;
+}
+
 .opponent-card-dim {
-  background: white;
-  border-radius: 2px;
   min-height: 7rem;
   width: 5rem;
   display: flex;
   align-items: center;
+  background: white;
+  border: solid rgb(204,56,54);
 }
 
 .opponent img {
   height: 5rem;
 }
 
-#game-table {
-  min-width: 100vw;
-  min-height: 100vh;
-  padding: 1em;
+.my-deck-dim {
+  height: 14rem;
+  width: 10rem;
+  display: flex;
+  align-items: center;
+  background: white;
+  border: solid rgb(204,56,54);
+  margin: 0;
+}
+
+.my-deck-dim img {
+  height: 10rem;
 }
 
 p.opponent-name, p.opponent-card-count {
@@ -22,8 +34,44 @@ p.opponent-name, p.opponent-card-count {
   font-size: 1rem;
 }
 
+#game-table {
+  min-width: 100vw;
+  min-height: 100vh;
+  padding: 1em;
+  display: flex;
+  flex-direction: column;
+}
+
+#me {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+}
+
+#my-view {
+  display: flex;
+  justify-content: space-around;
+  margin: 5%;
+  flex-grow: 1;
+}
+
+#my-deck {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+#my-deck p {
+  margin: 5px;
+  font-size: 1.5rem;
+}
+
 #opponents {
   display: flex;
   justify-content: space-around;
-  height: 10vh;
+}
+
+#pile {
+  min-height: 15rem;
+  min-width: 11rem;
 }
