--- a/src/components/GameTable.css
+++ b/src/components/GameTable.css
@@ -34,6 +34,10 @@ p.opponent-name, p.opponent-card-count {
   font-size: 1rem;
 }
 
+img.pile {
+  height: 150%;
+}
+
 #game-table {
   min-width: 100vw;
   min-height: 100vh;
